--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "ramsey/uuid": "^3.8",
+        "ext-json": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -33,7 +36,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Lash\\Domain\\": "Domain/",
+            "Lash\\Infrastructure\\": "Infrastructure/"
         },
         "classmap": [
             "database/seeds",
